[package]
name = "ddns"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log_x = { git = "https://github.com/arloor/rust_http_proxy.git" }
log = "0.4"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
anyhow = "1" # 错误处理
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] } # HTTP 客户端